week end commit